# HackMTY2025

./: LICENSE  data.csv  main.py  prediction.json  pyproject.toml  requirements.txt  transactions.csv  vercel.json
api/: main.py
csv/: balance_history.csv
